Fix missing borders

--- a/contrib/django/freppledb/common/static/css/frepple.css
+++ b/contrib/django/freppledb/common/static/css/frepple.css
@@ -97,10 +97,6 @@ hr {
     color: #555;
 }
 
-.ui-corner-all {
-    border: none;
-}
-
 .save_undo_button_active {
     padding-bottom: 4px;
     padding-left: 6px;
